cmake_minimum_required(VERSION 3.9.6)

project(core LANGUAGES CXX)

# add_library(core SHARED

# )

# target_include_directories(core PUBLIC $<INSTALL_INTERFACE:include>
# $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> )

# target_link_libraries(core PRIVATE project_options project_warnings )

# add_library(scopy::core ALIAS core)
